fix: remove dark mode inversion for infobox images

--- a/src/SiteCommon_Templates/modules/infobox.less
+++ b/src/SiteCommon_Templates/modules/infobox.less
@@ -54,11 +54,6 @@
 		}
 	}
 
-	// 抵消 Extension:DarkMode 的反色
-	html.client-darkmode & img {
-		filter: invert(1) hue-rotate(180deg);
-	}
-
 	td:only-child,
 	th:only-child {
 		width: 100%;
